# mamlonline

./: .gitignore  LICENSE.MIT  Makefile  README.md
backend/: Cargo.toml
backend/src/: http_to_https.rs  main.rs  session_manager.rs
templates/: already_logged_in.html.tera  already_logged_in_admin.html.tera  welcome.html.tera  welcome_admin.html.tera
www/: index.html
www/mamlonline/: host.html  hostlogin.html  incompetition.html  index.css  index.html  index.js  login.html
www/mamlonline/css/: host.css  hostlogin.css  incompetition.css  login.css
www/mamlonline/js/: host.js  incompetition.js  login.js
