[package]
name = "backend"
version = "0.1.0"
authors = ["Mark Barbone <mark.l.barbone@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rocket = { version = "0.4.4", features = ["tls"] }
tiny_http = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.7"
parking_lot = "0.10"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["tera_templates"]
